ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: tp-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: back-service
            port:
              number: 80
